--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Dice Roller</title>
 
     <style type="text/css">
-        @import "../main.css";
+        @import "main.css";
     </style>
     <style type="text/css">
-        @import "dice.css";
+        @import "dice/dice.css";
     </style>
 
 </head>
@@ -52,15 +52,15 @@
     </div>
     <div id="canvas"></div>
 
-    <script src="../libs/three.min.js"></script>
-    <script src="../libs/cannon.min.js"></script>
+    <script src="libs/three.min.js"></script>
+    <script src="libs/cannon.min.js"></script>
     <!--script type="text/javascript" src="https://drive.google.com/uc?id=0ByGeV2TiysmOelhLSnlUQ3ZMc2M"></script>
     <script type="text/javascript" src="https://drive.google.com/uc?id=0ByGeV2TiysmOczhfWW90OEV0dmM"></script-->
 
 
-    <script type="text/javascript" src="../teal.js"></script>
-    <script type="text/javascript" src="dice.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="teal.js"></script>
+    <script type="text/javascript" src="dice/dice.js"></script>
+    <script type="text/javascript" src="dice/main.js"></script>
     <script type="text/javascript" defer="defer">
         dice_initialize(document.body);
     </script>
