--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 
 <body style="margin: 0" id="body">
     <div class="control_panel">
+        <button id="color-picker-wrapper" onclick="openPicker()">Trocar Cor
+            <input type="color" id="color-picker" onchange="changeColor()">
+        </button>
         <p id="loading_text">Carregando bibliotecas...</p>
         <div id="results">
             <span id="label_last_title">Ultimos resultados:</span>
@@ -51,17 +54,33 @@
             <br/>
             <button id="clear">Limpar</button>
             <button style="margin-left: 0.6em" id="throw">Jogar</button>
-
-            <input type="color" id="colorPicker" onchange="changeColor()">
         </div>
     </div>
     <div id="canvas"></div>
 
     <script>
-        function changeColor() {
-            var picker = document.getElementById('colorPicker');
-            localStorage.setItem('diceColor', picker.value);
+        var color_picker = document.getElementById("color-picker");
+        var color_picker_wrapper = document.getElementById("color-picker-wrapper");
+        var savedColor = localStorage.getItem('diceColor');
+
+        if (savedColor) {
+            color_picker_wrapper.style.backgroundColor = savedColor;
+            color_picker.value = savedColor;
         }
+
+        color_picker.onchange = function() {
+            color_picker_wrapper.style.backgroundColor = color_picker.value;
+
+            var picker = document.getElementById('color-picker');
+            localStorage.setItem('diceColor', picker.value);
+            location.reload();
+        }
+
+        function openPicker() {
+            color_picker.click();
+        }
+
+        color_picker_wrapper.style.backgroundColor = color_picker.value;
     </script>
 
     <script src="libs/three.min.js"></script>
